test/fail/basic_syntax/invalid_parameter.type.lly
#[
SyntaxError: Class 'asdf' does not exist.
    from invalid_parameter.type.lly:6
]#

define f(g: asdf) {
}
